# starpls

./: .bazelignore  .bazeliskrc  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  DEVELOPMENT.md  DIALECT_EXTENSIBILITY_PROPOSAL.md  DIALECT_EXTENSION_SPEC.md  EXTENSIBLE_STARLARK_VISION.md  EXTENSION_SYSTEM_REFACTORING.md  GAZELLE.md  MODULE.bazel  Makefile  OBJECT_METHODS_EXTENSION_SPEC.md  README.md  ROADMAP_TODO.md  STARPLS_TYPE_SYSTEM_DEEP_DIVE.md  WORKSPACE  WORKSPACE.bazel  example_exec_extension.json  rust-toolchain.toml  rustfmt.toml  test_exec.star
.github/workflows/: build.yml  feature-branch-build.yml  release.yml  rust.yml
bazel/: remote-cache.bazelrc  setup-ci.sh
bazel/patches/: 0001-bzlmod-support-nightly.patch
crates/starpls/: BUILD.bazel  Cargo.toml
crates/starpls/src/: bazel.rs  check.rs  commands.rs  config.rs  convert.rs  debouncer.rs  diagnostics.rs  dispatcher.rs  document.rs  event_loop.rs  extensions.rs  main.rs  server.rs  task_pool.rs  utils.rs
crates/starpls/src/builtin/: builtin.pb
crates/starpls/src/commands/: check.rs  server.rs
crates/starpls/src/handlers/: notifications.rs  requests.rs
crates/starpls/src/plugin/: loader.rs  mod.rs  schema.rs
crates/starpls_bazel/: BUILD.bazel  Cargo.toml  build.rs
crates/starpls_bazel/data/: build.builtins.json  bzl.builtins.json  commonAttributes.json  cquery.builtins.json  missingModuleFields.json  module-bazel.builtins.json  repo.builtins.json  vendor.builtins.json  workspace.builtins.json
crates/starpls_bazel/src/: attr.rs  build_language.rs  client.rs  dialect.rs  env.rs  label.rs  lib.rs
crates/starpls_common/: BUILD.bazel  Cargo.toml
crates/starpls_common/src/: diagnostics.rs  dialect.rs  examples.rs  extensions.rs  lib.rs  standard_dialect.rs  tilt_dialect.rs  type_expr.rs
crates/starpls_hir/: BUILD.bazel  Cargo.toml
crates/starpls_hir/src/: api.rs  def.rs  display.rs  lib.rs  test_database.rs  ty.rs  typeck.rs
crates/starpls_hir/src/def/: codeflow.rs  lower.rs  resolver.rs  scope.rs  tests.rs
crates/starpls_hir/src/def/codeflow/: pretty.rs
crates/starpls_hir/src/typeck/: builtins.rs  call.rs  custom.rs  infer.rs  intrinsics.rs  tests.rs
crates/starpls_ide/: BUILD.bazel  Cargo.toml
crates/starpls_ide/src/: completion.rs  completions.rs  diagnostics.rs  document_symbols.rs  find_references.rs  goto_definition.rs  handlers.rs  hover.rs  lib.rs  line_index.rs  show_hir.rs  show_syntax_tree.rs  signature_help.rs  util.rs  view_syntax_tree.rs
crates/starpls_ide/src/handlers/: completion.rs  diagnostics.rs  goto_definition.rs  hover.rs  line_index.rs  show_hir.rs  show_syntax_tree.rs  signature_help.rs  view_syntax_tree.rs
crates/starpls_ide/src/hover/: docs.rs
crates/starpls_intern/: BUILD.bazel  Cargo.toml
crates/starpls_intern/src/: lib.rs
crates/starpls_lexer/: BUILD.bazel  Cargo.toml
crates/starpls_lexer/src/: cursor.rs  lib.rs  tests.rs  unescape.rs
crates/starpls_lexer/src/unescape/: tests.rs
crates/starpls_parser/: BUILD.bazel  Cargo.toml
crates/starpls_parser/src/: grammar.rs  lib.rs  marker.rs  step.rs  syntax_kind.rs  tests.rs  text.rs
crates/starpls_parser/src/grammar/: arguments.rs  expressions.rs  parameters.rs  statements.rs  type_comments.rs
crates/starpls_parser/test_data/err/: test_dot_expr_missing_member.rast  test_error_block.rast  test_error_block.star  test_for_stmt_missing_colon.rast  test_for_stmt_missing_colon.star  test_for_stmt_missing_in.rast  test_for_stmt_missing_in.star  test_for_stmt_missing_iterable.rast  test_for_stmt_missing_iterable.star  test_for_stmt_missing_loop_variables.rast  test_for_stmt_missing_suite.rast  test_for_stmt_missing_suite.star
crates/starpls_parser/test_data/ok/: test_arguments_all.rast  test_arguments_all.star  test_break_stmt.rast  test_continue_stmt.rast  test_dot_expr_full.rast  test_for_stmt_full.rast  test_for_stmt_full.star  test_pass_stmt.rast  test_return_stmt.rast  test_return_stmt.star  test_suite_full.rast  test_suite_full.star
crates/starpls_syntax/: BUILD.bazel  Cargo.toml
crates/starpls_syntax/src/: ast.rs  lib.rs  parser.rs
crates/starpls_test_util/: BUILD.bazel  Cargo.toml
crates/starpls_test_util/src/: lib.rs
docs/: builtin-audit.md
editors/code/: .eslintrc.js  .swcrc  BUILD.bazel  package.json  pnpm-lock.yaml  tsconfig.json
editors/code/src/: commands.ts  context.ts  main.ts  util.ts
editors/code/syntaxes/: starlark.configuration.json  starlark.tmLanguage.json
examples/plugins/: README.md  bazel-company-rules.json  minimal-example.json  tilt-dialect.json
star_ls/: Cargo.toml
star_ls/src/: convert.rs  document.rs  event_loop.rs  handlers.rs  main.rs  server.rs  utils.rs
star_ls/src/handlers/: notifications.rs
star_ls_syntax/: Cargo.toml
star_ls_syntax/examples/: starlark_parser.rs
star_ls_syntax/src/: lib.rs
starpls/src/: document.rs  main.rs
starpls_lexer/: Cargo.toml
starpls_lexer/src/: cursor.rs  lib.rs  tests.rs  unescape.rs
starpls_lexer/src/unescape/: tests.rs
starpls_parser/: Cargo.toml
starpls_parser/src/: lib.rs  syntax_kind.rs
starpls_syntax/: Cargo.toml
tools/: cargo_wrapper.sh
xtask/: BUILD.bazel  Cargo.toml
xtask/src/: main.rs  update_parser_test_data.rs  util.rs
