[workspace]
resolver = "2"
members = [
    "crates/starpls",
    "crates/starpls_bazel",
    "crates/starpls_common",
    "crates/starpls_hir",
    "crates/starpls_ide",
    "crates/starpls_intern",
    "crates/starpls_lexer",
    "crates/starpls_parser",
    "crates/starpls_syntax",
    "crates/starpls_test_util",
    "xtask",
]
