module(name = "starpls")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "aspect_rules_js", version = "2.1.1")
bazel_dep(name = "aspect_rules_swc", version = "2.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.3.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_rust", version = "0.53.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["aarch64-unknown-linux-gnu"],
    versions = ["nightly/2023-12-06"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/starpls:Cargo.toml",
        "//crates/starpls_bazel:Cargo.toml",
        "//crates/starpls_common:Cargo.toml",
        "//crates/starpls_hir:Cargo.toml",
        "//crates/starpls_ide:Cargo.toml",
        "//crates/starpls_intern:Cargo.toml",
        "//crates/starpls_lexer:Cargo.toml",
        "//crates/starpls_parser:Cargo.toml",
        "//crates/starpls_syntax:Cargo.toml",
        "//crates/starpls_test_util:Cargo.toml",
        "//vendor/runfiles:Cargo.toml",
        "//xtask:Cargo.toml",
    ],
)
use_repo(crate, "crates")
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)

register_toolchains("//:prost_toolchain")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "sha512-pXWcraxM0uxAS+tN0AG/BF2TyqmHO014Z070UsJ+pFvYuRSq8KH8DmWpnbXe0pEPDHXZV3FcAbJkijJ5oNEnWw==",
    ts_version_from = "//editors/code:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//editors/code:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
