[package]
name = "star_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
lsp-server = "0.7.5"
lsp-types = "0.94.1"
serde = "1.0.193"
serde_json = "1.0.108"
