[package]
name = "star-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
dashmap = "5.5.3"
line-index = "0.1.0"
lsp-server = "0.7.5"
lsp-types = "0.94.1"
rustc-hash = "1.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
tree-sitter = "0.20.10"
tree-sitter-starlark = "1.1.0"
