load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "starpls",
    srcs = glob(["src/**/*.rs"]),
    compile_data = [":src/builtin/builtin.pb"],
    deps = all_crate_deps() + [
        "//crates/starpls_bazel",
        "//crates/starpls_common",
        "//crates/starpls_ide",
        "//crates/starpls_syntax",
    ],
)

platform_transition_filegroup(
    name = "starpls_arm",
    srcs = [":starpls"],
    target_platform = "//:aarch64_linux",
)
