[package]
name = "starpls"
version = "0.1.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
dashmap = "5.5.3"
indexmap = "2.1.0"
line-index = "0.1.0"
lsp-server = "0.7.5"
lsp-types = "0.94.1"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
starpls_bazel = { path = "../starpls_bazel" }
starpls_common = { path = "../starpls_common" }
starpls_syntax = { path = "../starpls_syntax" }
starpls_hir = { path = "../starpls_hir" }
starpls_ide = { path = "../starpls_ide" }
parking_lot = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
annotate-snippets = "0.11.5"
anstream = "0.6.18"
walkdir = "2.5.0"
regex = "1.10.2"

[dev-dependencies]
tempfile = "3.0"
