load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "builtin_proto",
    srcs = ["data/builtin.proto"],
)

rust_prost_library(
    name = "builtin_proto_rust",
    proto = ":builtin_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_proto",
    srcs = ["data/build.proto"],
)

rust_prost_library(
    name = "build_proto_rust",
    proto = ":build_proto",
    visibility = ["//visibility:public"],
)

rust_library(
    name = "starpls_bazel",
    srcs = glob(["src/**/*.rs"]),
    compile_data = [
        "data/build.builtins.json",
        "data/bzl.builtins.json",
        "data/commonAttributes.json",
        "data/cquery.builtins.json",
        "data/missingModuleFields.json",
        "data/module-bazel.builtins.json",
        "data/repo.builtins.json",
        "data/vendor.builtins.json",
        "data/workspace.builtins.json",
    ],
    rustc_flags = ["--cfg=bazel"],
    deps = [
        ":build_proto_rust",
        ":builtin_proto_rust",
        "@crates//:anyhow",
        "@crates//:bytes",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "starpls_bazel_test",
    crate = ":starpls_bazel",
    rustc_flags = ["--cfg=bazel"],
)
