[package]
name = "starpls_bazel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
prost = "0.12.3"

[build-dependencies]
prost-build = "0.12.3"

[[bin]]
name = "inspect-builtins"
path = "src/bin/main.rs"
