load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_common",
    srcs = glob(["src/**/*.rs"]),
    aliases = {
        "@crates//:salsa": "salsa",
    },
    deps = all_crate_deps() + [
        "//crates/starpls_bazel",
        "//crates/starpls_syntax",
    ],
)
