load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_hir",
    srcs = glob(["src/**/*.rs"]),
    aliases = {
        "@crates//:salsa": "salsa",
    },
    deps = all_crate_deps() + [
        "//crates/starpls_bazel",
        "//crates/starpls_common",
        "//crates/starpls_intern",
        "//crates/starpls_syntax",
        "//crates/starpls_test_util",
    ],
)

rust_test(
    name = "starpls_hir_test",
    aliases = {
        "@crates//:salsa": "salsa",
    },
    crate = ":starpls_hir",
    deps = all_crate_deps(normal_dev = True),
)
