[package]
name = "starpls_hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "f1d318a2795e87081e316a5f31ef02f0cd6a1c83" }
