[package]
name = "starpls_hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.3"
dashmap = "5.5.3"
id-arena = "2.2.1"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "f1d318a2795e87081e316a5f31ef02f0cd6a1c83" }
starpls_syntax = { path = "../starpls_syntax" }
starpls_common = { path = "../starpls_common" }
starpls_intern = { path = "../starpls_intern" }
starpls_test_util = { path = "../starpls_test_util" }
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
smol_str = "0.2.0"
