load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_ide",
    srcs = glob(["src/**/*.rs"]),
    aliases = {
        "@crates//:salsa": "salsa",
    },
    deps = [
        "//crates/starpls_bazel",
        "//crates/starpls_common",
        "//crates/starpls_hir",
        "//crates/starpls_syntax",
        "//crates/starpls_test_util",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:rustc-hash",
        "@crates//:salsa",
        "@crates//:unindent",
    ],
)

rust_test(
    name = "starpls_ide_test",
    aliases = {
        "@crates//:salsa": "salsa",
    },
    crate = ":starpls_ide",
    deps = [
        "@crates//:expect-test",
    ],
)
