[package]
name = "starpls_ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
salsa = { git = "https://github.com/withered-magic/salsa", package = "salsa-2022", rev = "91fdda90b344ef74e9bf35c3a5bb0fbae22ed6fb" }
starpls_bazel = { path = "../starpls_bazel" }
starpls_common = { path = "../starpls_common" }
starpls_hir = { path = "../starpls_hir" }
starpls_syntax = { path = "../starpls_syntax" }
