load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_intern",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@crates//:dashmap",
        "@crates//:hashbrown",
        "@crates//:rustc-hash",
        "@crates//:triomphe",
    ],
)
