load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_parser",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//crates/starpls_lexer",
        "@crates//:drop_bomb",
    ],
)

filegroup(
    name = "test_data",
    srcs = glob(["test_data/**"]),
)

rust_test(
    name = "starpls_parser_test",
    crate = ":starpls_parser",
    data = [":test_data"],
    deps = [
        "//vendor/runfiles",
        "@crates//:expect-test",
    ],
)
