load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_parser",
    srcs = glob(["src/**/*.rs"]),
    deps = all_crate_deps() + [
        "//crates/starpls_lexer",
    ],
)

filegroup(
    name = "test_data",
    srcs = glob(["test_data/**"]),
)

rust_test(
    name = "starpls_parser_test",
    crate = ":starpls_parser",
    data = [":test_data"],
    deps = all_crate_deps(normal_dev = True) + [
        "//vendor/runfiles",
    ],
)
