[package]
name = "starpls_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
runfiles = { path = "../../vendor/runfiles" }
starpls_lexer = { path = "../starpls_lexer" }

[dev-dependencies]
expect-test = "1.4.1"
