load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_syntax",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//crates/starpls_lexer",
        "//crates/starpls_parser",
        "@crates//:line-index",
        "@crates//:rowan",
    ],
)
