load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "starpls_syntax",
    srcs = glob(["src/**/*.rs"]),
    deps = all_crate_deps() + [
        "//crates/starpls_lexer",
        "//crates/starpls_parser",
    ],
)
