load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file", "write_source_files")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "swc",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    root_dir = "src",
    source_map = True,
    transpiler = partial.make(
        swc,
        out_dir = "dist",
        root_dir = "src",
        source_maps = "true",
        swcrc = ":.swcrc",
    ),
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@types/vscode",
        ":node_modules/vscode-languageclient",
    ],
)

copy_to_directory(
    name = "swc_copy",
    srcs = [":swc"],
    root_paths = ["editors/code/dist"],
)

write_source_files(
    name = "code",
    files = {
        "dist": ":swc_copy",
    },
)

write_source_file(
    name = "copy_starpls",
    executable = True,
    in_file = "//crates/starpls",
    out_file = "bin/starpls",
)
